UtahLiveDataTest/src/objects/Grant__c.object
<CustomObject>
    <description>[Business] Stores all the grant related information a Grant can have multiple Awards only one award is active at any given point of time</description>
    <fields>
        <fullName>AddressGrantsSpecialist__c</fullName>
        <label>Grants Specialist Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AddressProgramContact__c</fullName>
        <label>Program Contact Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AdministrationAcronym__c</fullName>
        <label>Administration Acronym</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountAwardedThisBudgetPeriod__c</fullName>
        <label>Amount Awarded This Budget Period</label>
        <summarizedField>Award__c.AmountAwardedThisBudgetPeriod__c</summarizedField>
        <summaryForeignKey>Award__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AmountAwardedToDate__c</fullName>
        <label>Amount Awarded To Date</label>
        <summarizedField>Award__c.AmountAwardedToDate__c</summarizedField>
        <summaryForeignKey>Award__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>GrantsAnn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationPOC__c</fullName>
        <label>ApplicationPOC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grantshro1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grantshrop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardedAmountthisAction__c</fullName>
        <label>Awarded Amount this Action</label>
        <summarizedField>Award__c.AwardedAmountthisAction__c</summarizedField>
        <summaryForeignKey>Award__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AwardingAgency__c</fullName>
        <label>Awarding Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodEndDate__c</fullName>
        <label>Current Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodStartDate__c</fullName>
        <label>Current Budget Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BuildUpGridNeeded__c</fullName>
        <formula>TEXT(Application__r.Announcement__r.DetailedBudgetingRequired__c)</formula>
        <label>BuildUpGridNeeded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BureauChief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bureau Chief</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <formula>FederalProgram__r.FederalProgramCFDA__c</formula>
        <label>CFDA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <formula>CreatedBy.FirstName&amp;&quot; &quot;&amp;CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CumulativeAwardedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Cumulative Awarded Amount for this grant</description>
        <inlineHelpText>Cumulative Awarded Amount for this grant</inlineHelpText>
        <label>Cumulative Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentAwardAmount__c</fullName>
        <label>Current Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentAward__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the current year award lookup field and is used to refer to latest award details</description>
        <inlineHelpText>This show the latest award details</inlineHelpText>
        <label>Current Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentProjectPeriod__c</fullName>
        <description>Project period in the format Start Date &apos;To&apos; End Date</description>
        <formula>IF(AND(NOT(ISBLANK(ProjectPeriodStartDate__c)),NOT(ISBLANK(ProjectPeriodEndDate__c))),TEXT(MONTH( ProjectPeriodStartDate__c ))+&quot;/&quot; +TEXT(DAY(ProjectPeriodStartDate__c))+&quot;/&quot; +TEXT(YEAR(ProjectPeriodStartDate__c))+&quot;--&quot;+ TEXT(MONTH( ProjectPeriodEndDate__c ))+&quot;/&quot; +TEXT(DAY(ProjectPeriodEndDate__c))+&quot;/&quot; +TEXT(YEAR(ProjectPeriodEndDate__c)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project period in the format Start Date &apos;To&apos; End Date</inlineHelpText>
        <label>Project Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNSNumber__c</fullName>
        <formula>InternalOrganization__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataEvaluator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Evaluator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisableCreateAwardButton__c</fullName>
        <description>This field will determine whether to enable  create award  btn on Grant View page</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will determine whether to enable  create award  btn on Grant View page</inlineHelpText>
        <label>Disable Create Award Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableGrantProjectAreas__c</fullName>
        <description>This field decided whether to disable Grant Project Areas on Grant View page</description>
        <formula>NumberofProjectAreas__c  = 0</formula>
        <inlineHelpText>This field decided whether to disable Grant Project Areas on Grant View page</inlineHelpText>
        <label>Disable Grant Project Areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableGranteeEditandDelete__c</fullName>
        <formula>ISPICKVAL( Status__c , &apos;Active&apos;) || ISPICKVAL(Status__c,&apos;Closed/Completed&apos;)</formula>
        <label>Disable Grantee Edit and Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableRiskBtn__c</fullName>
        <formula>ISPICKVAL(Status__c,&apos;Closed/Completed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Risk Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayEditButton__c</fullName>
        <formula>IF( $UserRole.Name == &apos;CHA Project Officer&apos; || $UserRole.Name == &apos;CHA Program Manager&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecutiveApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExecutiveApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GrantshKTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalOrgName__c</fullName>
        <formula>ExternalOrganization__r.OrganizationName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExternalOrgName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Federal Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Grants (Federal Program)</relationshipLabel>
        <relationshipName>Grants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieldHistoryEntityName__c</fullName>
        <description>This field will show Entity Name in Field level history.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will show Entity Name in Field level history.</inlineHelpText>
        <label>Field History Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantAbbreviation__c</fullName>
        <description>Unique Abbreviation used for internal Financial System integration</description>
        <inlineHelpText>Unique Abbreviation used for internal Financial System integration</inlineHelpText>
        <label>Grant Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantDescription__c</fullName>
        <description>This field stores the Grant Description.</description>
        <label>Grant Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GrantMonitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Monitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantNumber__c</fullName>
        <inlineHelpText>Grant Identification Number given by the Awarding Agency</inlineHelpText>
        <label>Grant Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantProjectAreaAllocatedAmount__c</fullName>
        <label>GrantProjectArea Allocated Amount</label>
        <summarizedField>GrantServiceArea__c.AmountAllocated__c</summarizedField>
        <summaryForeignKey>GrantServiceArea__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GrantSupervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GrantsOyeU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantType1__c</fullName>
        <label>Grant Type 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantType__c</fullName>
        <label>Grant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formula Grant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GranteeHideEditAndDelete__c</fullName>
        <formula>(Text(Status__c) != &apos;Draft&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GranteeHideEditAndDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GranteeHideNewButton__c</fullName>
        <formula>NumberofAwards__c &gt; 0</formula>
        <label>GranteeHideNewButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GranteePOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grantee POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantsContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grants Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantsManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantsManager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GrantshKTy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideCloseoutTab__c</fullName>
        <formula>IF(OR(Text(Status__c)=&apos;Active&apos;,Text(Status__c)=&apos;Closed/Completed&apos;),false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideCloseoutTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDelete__c</fullName>
        <formula>TEXT(Status__c)=&apos;Active&apos; || TEXT(Status__c)=&apos;Closed/Completed&apos; || TEXT(Status__c)=&apos;Draft&apos; || TEXT(Status__c)=&apos;Terminated&apos; || TEXT(Status__c)=&apos;Expired&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFundingSources__c</fullName>
        <description>This Hides Funding Source Section on Grants based on Number of Awards</description>
        <formula>ISPICKVAL( Status__c , &apos;Draft&apos;)</formula>
        <label>Hide Funding Sources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewBudgetPeriodButton__c</fullName>
        <formula>(ExternalOrgName__c == &apos;USBE&apos;) || ((Text(Status__c) != &apos;Draft&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideNewBudgetPeriodButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewPackOnActGrant__c</fullName>
        <description>This field hides the new button for packages on an active grant</description>
        <formula>If(ISPICKVAL(Status__c,&apos;Active&apos;),true,false)</formula>
        <label>HideNewPackOnActGrant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewPackageBtn__c</fullName>
        <description>Logic for Hiding New Package Button</description>
        <formula>(Text(Status__c) != &apos;Draft&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding New Package Button</inlineHelpText>
        <label>Hide New Package Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUOVC__c</fullName>
        <formula>ExternalOrgName__c != &apos;UOVC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide UOVC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUSBE__c</fullName>
        <formula>ExternalOrgName__c != &apos;USBE&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide USBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Grants (Internal Organization)</relationshipLabel>
        <relationshipName>Grants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsAdvancePermitted__c</fullName>
        <label>Is Advance Permitted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsOwner__c</fullName>
        <formula>IF(OwnerId = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTCScheduleCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTCScheduleCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IssuedAwards__c</fullName>
        <label>Issued Awards</label>
        <summaryFilterItems>
            <field>Award__c.Status__c</field>
            <operation>equals</operation>
            <value>Issued</value>
        </summaryFilterItems>
        <summaryForeignKey>Award__c.Grant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LEAComment__c</fullName>
        <label>LEA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LEAGrantIdentifier__c</fullName>
        <label>LEA Grant Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestAwardId__c</fullName>
        <label>Latest Award Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestAwardLink__c</fullName>
        <formula>IF( LatestAwardId__c  &lt;&gt; null,HYPERLINK(&apos;/apex/awardview?id=&apos;+LatestAwardId__c ,  LatestAwardName__c  , &apos;_self&apos;),&apos;&apos;)</formula>
        <label>Latest Award Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestAwardName__c</fullName>
        <label>Latest Award Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestAwardTotalAwardedAmount__c</fullName>
        <label>Total Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSPUniqueKeyFormula__c</fullName>
        <formula>Program__c + InternalOrganization__c + ProgramCode__c + ObjectCode__c + FiscalYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSPUniqueKeyFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSPValidateOrderNumber__c</fullName>
        <label>MSP Validate Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Myfield__c</fullName>
        <label>Myfield</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>IF($Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c = &apos;StateasGrantor&apos;,&apos;GT-&apos;+  GrantAbbreviation__c  +&apos;-&apos;,&apos;FGT-&apos;+ GrantAbbreviation__c +&apos;-&apos;)</formula>
        <label>NameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NeedUSBEApprovalProcess__c</fullName>
        <formula>Program__r.NeedUSBEApprovalProcess__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NeedUSBEApprovalProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfApprovedAwards__c</fullName>
        <label>Number of Awarded Awards</label>
        <summaryFilterItems>
            <field>Award__c.Status__c</field>
            <operation>equals</operation>
            <value>Activated</value>
        </summaryFilterItems>
        <summaryForeignKey>Award__c.Grant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofAwards__c</fullName>
        <label>Number of Awards</label>
        <summaryForeignKey>Award__c.Grant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofProjectAreas__c</fullName>
        <description>Count for Number of Project Areas in Grant</description>
        <label>Number of Project Areas</label>
        <summaryForeignKey>GrantServiceArea__c.Grant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ObjectCode__c</fullName>
        <label>Object Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>Organization Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaymentApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GrantshKUD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GrantshKUN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GrantshKUS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is federal Government Contact.It is used in Grantee application</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimeRecipient__c</fullName>
        <label>Prime Recipient</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramComment__c</fullName>
        <label>Program Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramCode</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramsContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programs Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjDirAddress__c</fullName>
        <label>Project Director Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectDescription__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProjectDirectorName__c</fullName>
        <formula>ProjectDirector__r.FirstName &amp;&quot; &quot; &amp; ProjectDirector__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectOfficer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grants7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodEndDate__c</fullName>
        <label>Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodStartDate__c</fullName>
        <label>Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectTitle__c</fullName>
        <label>Project Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingAmountRollup__c</fullName>
        <label>RemainingAmountRollup</label>
        <summarizedField>GrantBudgetCategory__c.RemainingBudget__c</summarizedField>
        <summaryForeignKey>GrantBudgetCategory__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RemainingBudget__c</fullName>
        <label>Remaining Grant Amount</label>
        <summarizedField>Award__c.RemainingBudget__c</summarizedField>
        <summaryForeignKey>Award__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RemainingGrantAmount__c</fullName>
        <formula>TotalOriginalGrantAmount__c + TotalAdjustedAmount__c - CumulativeAwardedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Grant Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenderAmendmentRequestSubmit__c</fullName>
        <formula>Text($User.UserType) = &apos;Standard&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Amendment Request Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportingPackagesRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Packages Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskAssessmentPackage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Assessment Package</label>
        <referenceTo>GNT__Package__c</referenceTo>
        <relationshipLabel>Grants (Risk Assessment Package)</relationshipLabel>
        <relationshipName>Grants2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowActiveGrants__c</fullName>
        <formula>(ISPICKVAL(Status__c,&apos;Draft&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Active Grants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowRiskTab__c</fullName>
        <formula>ISPICKVAL(Program__r.RiskAssessmentRequired__c,&apos;No&apos;) || NOT(ISPICKVAL(Status__c,&apos;Active&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShowRiskTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpendType__c</fullName>
        <label>Spend Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sub Awards</fullName>
                    <default>true</default>
                    <label>Sub Awards</label>
                </value>
                <value>
                    <fullName>Internal Spend</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>ISA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Closed/Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SumOfSpendPercent__c</fullName>
        <label>Sum of Spend %</label>
        <summarizedField>SpendPlan__c.SpendPercent__c</summarizedField>
        <summaryForeignKey>SpendPlan__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SumofAwardAmount__c</fullName>
        <label>SumofAwardAmount</label>
        <summarizedField>Award__c.AmountAwardedThisBudgetPeriod__c</summarizedField>
        <summaryForeignKey>Award__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testdataentry__c</fullName>
        <label>Test data entry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalActiveAwardAmount__c</fullName>
        <label>Total Active Award Amount</label>
        <summarizedField>Award__c.TotalAmountFromFINET__c</summarizedField>
        <summaryFilterItems>
            <field>Award__c.Status__c</field>
            <operation>equals</operation>
            <value>Activated</value>
        </summaryFilterItems>
        <summaryForeignKey>Award__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalAdjustedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAwardedAmountTillDate__c</fullName>
        <label>Total Awarded Amount Till Date</label>
        <summarizedField>GrantBudgetCategory__c.AwardedBudget__c</summarizedField>
        <summaryForeignKey>GrantBudgetCategory__c.Grant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFundingSourceAllocatedAmount__c</fullName>
        <label>Total Funding Source Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>